Added a title and background on hover of popup btns

--- a/newspage.html
+++ b/newspage.html
@@ -100,13 +100,14 @@
 					</div>
 				</div>
 				<div class="control">
-					<img src="./images/icons/arrow-left.svg" alt="" /><img
-						src="./images/icons/arrow-right.svg"
+					<img
+						src="./images/icons/arrow-left.svg"
 						alt=""
-					/>
+						title="previous"
+					/><img src="./images/icons/arrow-right.svg" alt="" title="next" />
 				</div>
 				<div class="submit-container">
-					<a href="./dashboard.html">
+					<a href="./dashboard.html" title="submit">
 						<button>Submit</button>
 					</a>
 				</div>
