--- a/index.html
+++ b/index.html
@@ -11,22 +11,16 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet"
 		/>
-
-		<link rel="stylesheet" href="styles/login.css" />
+		<!-- My stylesheet -->
+		<link rel="stylesheet" href="./styles/login.css" />
 	</head>
 	<body>
-		<div class="login-box">
+		<form class="login-box">
 			<div class="login-header">
 				<header>Login</header>
 			</div>
 			<div class="input-box">
-				<input
-					type="text"
-					class="input-field"
-					placeholder="Email"
-					autocomplete="off"
-					required
-				/>
+				<input type="text" class="input-field" placeholder="Email" required />
 			</div>
 			<div class="input-box">
 				<input
@@ -47,13 +41,24 @@
 				</section>
 			</div>
 			<div class="input-submit">
-				<a href="./dashboard.html">
+				<button
+					type="button"
+					class="submit-btn"
+					id="submit"
+					onclick="location.href='./dashboard.html'"
+				>
+					Sign In
+				</button>
+				<!-- 
+				Why does the code below not work and yet the one above works
+				-->
+				<!-- <a href="./dashboard.html">
 					<button class="submit-btn" id="submit">Sign In</button>
-				</a>
+				</a> -->
 			</div>
 			<div class="sign-up-link">
-				<p>Don't have account? <a href="#">Sign Up</a></p>
+				<p>Don't have account? <a href="./signup.html">Sign Up</a></p>
 			</div>
-		</div>
+		</form>
 	</body>
 </html>
