Added animated nav in newspage

--- a/home.html
+++ b/home.html
@@ -28,11 +28,23 @@
             Nav bar
         -->
 		<nav>
-			<h1 id="logo">QuickNews</h1>
+			<h1 id="text-logo">QuickNews</h1>
 			<div id="cta-buttons">
 				<button>Login</button>
 				<button>Sign up</button>
 			</div>
 		</nav>
+
+		<!-- Hero section -->
+		<div class="hero-section">
+			<div class="right-side">
+				<h1>News Made Quicker</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
+					consequuntur deleniti earum voluptate, aperiam numquam.
+				</p>
+			</div>
+			<div class="left-side"></div>
+		</div>
 	</body>
 </html>
