--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<div class="input-submit">
 				<button
-					type="button"
+					type="submit"
 					class="submit-btn"
 					id="submit"
 					onclick="location.href='./dashboard.html'"
