--- a/newspage.html
+++ b/newspage.html
@@ -34,6 +34,11 @@
 		</nav>
 
 		<section class="news-content">
+			<div class="news-mode">
+				<li><a href="#audio">Audio</a></li>
+				<li><a href="#text">Text</a></li>
+				<li><a href="#video">Video</a></li>
+			</div>
 			<div class="container">
 				<div class="ad-section"></div>
 				<div class="main">
@@ -215,5 +220,6 @@ Updates ahead
 - Make the ineraction btns fill change to a certain color when hovered: Perhaps
 it is because the svg is only a path/border and does not have anything that 
 be filled asides it.
+- Clicking the text logo should redirect back to the dashboard page
 
 -->
