--- a/signup.html
+++ b/signup.html
@@ -100,7 +100,7 @@
 
 			<div class="input-submit">
 				<button
-					type="button"
+					type="submit"
 					class="signup-btn"
 					onclick="location.href='./index.html'"
 				>
