--- a/dashboard.html
+++ b/dashboard.html
@@ -173,6 +173,50 @@
 						</p>
 						<a href="./newspage.html" class="more">Read more</a>
 					</div>
+					<div class="interaction-btns">
+						<div class="interaction">
+							<!-- Like btn -->
+							<svg
+								width="18"
+								height="16"
+								viewBox="0 0 18 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="like"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M9 16C9 16 0 7.64952 0 4.68445C0 1.52744 1.64588 0 5.0625 0C6.75 0 9 2.5811 9 2.5811C9 2.5811 11.25 0 12.9375 0C16.3541 0 18 1.52644 18 4.68445C18 7.64952 9 16 9 16ZM12.9375 1.03264C12.0499 1.03264 9 3.61179 9 3.61179C9 3.61179 5.949 1.03264 5.0625 1.03264C2.07225 1.03264 1.125 2.15932 1.125 4.82149C1.125 7.32371 9 14.4504 9 14.4504C9 14.4504 16.875 7.32371 16.875 4.82149C16.875 2.15932 15.9277 1.03264 12.9375 1.03264Z"
+									fill="currentColor"
+								/>
+							</svg>
+
+							<span>20</span>
+						</div>
+						<div class="interaction">
+							<img src="./images/icons/comment.svg" alt="comment" />
+							<span>15</span>
+						</div>
+						<div class="interaction">
+							<!-- Save btn -->
+							<svg
+								width="10"
+								height="16"
+								viewBox="0 0 10 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="save"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M5 12L0 16V1C0 0.447715 0.447715 0 1 0H9C9.55228 0 10 0.447715 10 1V16L5 12ZM9 2C9 1.44772 8.55229 1 8 1H2C1.44772 1 1 1.44772 1 2V14L5 10.5L9 14V2Z"
+									fill="currentColor"
+								/>
+							</svg>
+						</div>
+					</div>
 				</div>
 				<!-- post 2 -->
 				<div class="news-post">
@@ -188,6 +232,50 @@
 							nihil quia molestias?
 						</p>
 						<a href="./newspage.html" class="more">Read more</a>
+					</div>
+					<div class="interaction-btns">
+						<div class="interaction">
+							<!-- Like btn -->
+							<svg
+								width="18"
+								height="16"
+								viewBox="0 0 18 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="like"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M9 16C9 16 0 7.64952 0 4.68445C0 1.52744 1.64588 0 5.0625 0C6.75 0 9 2.5811 9 2.5811C9 2.5811 11.25 0 12.9375 0C16.3541 0 18 1.52644 18 4.68445C18 7.64952 9 16 9 16ZM12.9375 1.03264C12.0499 1.03264 9 3.61179 9 3.61179C9 3.61179 5.949 1.03264 5.0625 1.03264C2.07225 1.03264 1.125 2.15932 1.125 4.82149C1.125 7.32371 9 14.4504 9 14.4504C9 14.4504 16.875 7.32371 16.875 4.82149C16.875 2.15932 15.9277 1.03264 12.9375 1.03264Z"
+									fill="currentColor"
+								/>
+							</svg>
+
+							<span>20</span>
+						</div>
+						<div class="interaction">
+							<img src="./images/icons/comment.svg" alt="comment" />
+							<span>15</span>
+						</div>
+						<div class="interaction">
+							<!-- Save btn -->
+							<svg
+								width="10"
+								height="16"
+								viewBox="0 0 10 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="save"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M5 12L0 16V1C0 0.447715 0.447715 0 1 0H9C9.55228 0 10 0.447715 10 1V16L5 12ZM9 2C9 1.44772 8.55229 1 8 1H2C1.44772 1 1 1.44772 1 2V14L5 10.5L9 14V2Z"
+									fill="currentColor"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 
@@ -206,6 +294,50 @@
 						</p>
 						<a href="./newspage.html" class="more">Read more</a>
 					</div>
+					<div class="interaction-btns">
+						<div class="interaction">
+							<!-- Like btn -->
+							<svg
+								width="18"
+								height="16"
+								viewBox="0 0 18 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="like"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M9 16C9 16 0 7.64952 0 4.68445C0 1.52744 1.64588 0 5.0625 0C6.75 0 9 2.5811 9 2.5811C9 2.5811 11.25 0 12.9375 0C16.3541 0 18 1.52644 18 4.68445C18 7.64952 9 16 9 16ZM12.9375 1.03264C12.0499 1.03264 9 3.61179 9 3.61179C9 3.61179 5.949 1.03264 5.0625 1.03264C2.07225 1.03264 1.125 2.15932 1.125 4.82149C1.125 7.32371 9 14.4504 9 14.4504C9 14.4504 16.875 7.32371 16.875 4.82149C16.875 2.15932 15.9277 1.03264 12.9375 1.03264Z"
+									fill="currentColor"
+								/>
+							</svg>
+
+							<span>20</span>
+						</div>
+						<div class="interaction">
+							<img src="./images/icons/comment.svg" alt="comment" />
+							<span>15</span>
+						</div>
+						<div class="interaction">
+							<!-- Save btn -->
+							<svg
+								width="10"
+								height="16"
+								viewBox="0 0 10 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="save"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M5 12L0 16V1C0 0.447715 0.447715 0 1 0H9C9.55228 0 10 0.447715 10 1V16L5 12ZM9 2C9 1.44772 8.55229 1 8 1H2C1.44772 1 1 1.44772 1 2V14L5 10.5L9 14V2Z"
+									fill="currentColor"
+								/>
+							</svg>
+						</div>
+					</div>
 				</div>
 				<!-- post 4 -->
 				<div class="news-post">
@@ -221,6 +353,50 @@
 							nihil quia molestias?...
 						</p>
 						<a href="./newspage.html" class="more">Read more</a>
+					</div>
+					<div class="interaction-btns">
+						<div class="interaction">
+							<!-- Like btn -->
+							<svg
+								width="18"
+								height="16"
+								viewBox="0 0 18 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="like"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M9 16C9 16 0 7.64952 0 4.68445C0 1.52744 1.64588 0 5.0625 0C6.75 0 9 2.5811 9 2.5811C9 2.5811 11.25 0 12.9375 0C16.3541 0 18 1.52644 18 4.68445C18 7.64952 9 16 9 16ZM12.9375 1.03264C12.0499 1.03264 9 3.61179 9 3.61179C9 3.61179 5.949 1.03264 5.0625 1.03264C2.07225 1.03264 1.125 2.15932 1.125 4.82149C1.125 7.32371 9 14.4504 9 14.4504C9 14.4504 16.875 7.32371 16.875 4.82149C16.875 2.15932 15.9277 1.03264 12.9375 1.03264Z"
+									fill="currentColor"
+								/>
+							</svg>
+
+							<span>20</span>
+						</div>
+						<div class="interaction">
+							<img src="./images/icons/comment.svg" alt="comment" />
+							<span>15</span>
+						</div>
+						<div class="interaction">
+							<!-- Save btn -->
+							<svg
+								width="10"
+								height="16"
+								viewBox="0 0 10 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="save"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M5 12L0 16V1C0 0.447715 0.447715 0 1 0H9C9.55228 0 10 0.447715 10 1V16L5 12ZM9 2C9 1.44772 8.55229 1 8 1H2C1.44772 1 1 1.44772 1 2V14L5 10.5L9 14V2Z"
+									fill="currentColor"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 
@@ -239,6 +415,50 @@
 						</p>
 						<a href="./newspage.html" class="more">Read more</a>
 					</div>
+					<div class="interaction-btns">
+						<div class="interaction">
+							<!-- Like btn -->
+							<svg
+								width="18"
+								height="16"
+								viewBox="0 0 18 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="like"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M9 16C9 16 0 7.64952 0 4.68445C0 1.52744 1.64588 0 5.0625 0C6.75 0 9 2.5811 9 2.5811C9 2.5811 11.25 0 12.9375 0C16.3541 0 18 1.52644 18 4.68445C18 7.64952 9 16 9 16ZM12.9375 1.03264C12.0499 1.03264 9 3.61179 9 3.61179C9 3.61179 5.949 1.03264 5.0625 1.03264C2.07225 1.03264 1.125 2.15932 1.125 4.82149C1.125 7.32371 9 14.4504 9 14.4504C9 14.4504 16.875 7.32371 16.875 4.82149C16.875 2.15932 15.9277 1.03264 12.9375 1.03264Z"
+									fill="currentColor"
+								/>
+							</svg>
+
+							<span>20</span>
+						</div>
+						<div class="interaction">
+							<img src="./images/icons/comment.svg" alt="comment" />
+							<span>15</span>
+						</div>
+						<div class="interaction">
+							<!-- Save btn -->
+							<svg
+								width="10"
+								height="16"
+								viewBox="0 0 10 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="save"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M5 12L0 16V1C0 0.447715 0.447715 0 1 0H9C9.55228 0 10 0.447715 10 1V16L5 12ZM9 2C9 1.44772 8.55229 1 8 1H2C1.44772 1 1 1.44772 1 2V14L5 10.5L9 14V2Z"
+									fill="currentColor"
+								/>
+							</svg>
+						</div>
+					</div>
 				</div>
 				<!-- post 6 -->
 				<div class="news-post">
@@ -254,6 +474,50 @@
 							nihil quia molestias?...
 						</p>
 						<a href="./newspage.html" class="more">Read more</a>
+					</div>
+					<div class="interaction-btns">
+						<div class="interaction">
+							<!-- Like btn -->
+							<svg
+								width="18"
+								height="16"
+								viewBox="0 0 18 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="like"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M9 16C9 16 0 7.64952 0 4.68445C0 1.52744 1.64588 0 5.0625 0C6.75 0 9 2.5811 9 2.5811C9 2.5811 11.25 0 12.9375 0C16.3541 0 18 1.52644 18 4.68445C18 7.64952 9 16 9 16ZM12.9375 1.03264C12.0499 1.03264 9 3.61179 9 3.61179C9 3.61179 5.949 1.03264 5.0625 1.03264C2.07225 1.03264 1.125 2.15932 1.125 4.82149C1.125 7.32371 9 14.4504 9 14.4504C9 14.4504 16.875 7.32371 16.875 4.82149C16.875 2.15932 15.9277 1.03264 12.9375 1.03264Z"
+									fill="currentColor"
+								/>
+							</svg>
+
+							<span>20</span>
+						</div>
+						<div class="interaction">
+							<img src="./images/icons/comment.svg" alt="comment" />
+							<span>15</span>
+						</div>
+						<div class="interaction">
+							<!-- Save btn -->
+							<svg
+								width="10"
+								height="16"
+								viewBox="0 0 10 16"
+								fill="currentColor"
+								xmlns="http://www.w3.org/2000/svg"
+								id="save"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M5 12L0 16V1C0 0.447715 0.447715 0 1 0H9C9.55228 0 10 0.447715 10 1V16L5 12ZM9 2C9 1.44772 8.55229 1 8 1H2C1.44772 1 1 1.44772 1 2V14L5 10.5L9 14V2Z"
+									fill="currentColor"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 			</div>
