Linked home btns to respective pages

--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
 		<nav>
 			<h1 id="text-logo">QuickNews</h1>
 			<div id="cta-buttons">
-				<button>Login</button>
-				<button>Sign up</button>
+				<button onclick="location.href='./index.html'">Login</button>
+				<button onclick="location.href='./signup.html'">Sign up</button>
 			</div>
 		</nav>
 
