--- a/newspage.html
+++ b/newspage.html
@@ -221,5 +221,6 @@ Updates ahead
 it is because the svg is only a path/border and does not have anything that 
 be filled asides it.
 - Clicking the text logo should redirect back to the dashboard page
-
+- Adding a comments section below news content
+- Organizing the icons into folders as they are getting too much
 -->
